# src/controllers/openid4vc/types/verifier.types.ts
@@ -90,6 +90,7 @@ export interface CreateAuthorizationRequest {
 
   requestSigner: OpenId4VcJwtIssuerDid | OpenId4VcIssuerX5cOptions
   expectedOrigins?: string[]
+  version?: 'v1' | 'v1.draft21' | 'v1.draft24'
 }
 
 /* -------------------------------------------------------------------------- */
@@ -99,6 +100,8 @@ export interface CreateAuthorizationRequest {
 export class OpenId4VcSiopVerifierClientMetadata {
   client_name?: string
   logo_uri?: string
+  background_color?: string
+  text_color?: string
 }
 
 export class OpenId4VcSiopCreateVerifierOptions {
